# victron-gx-publisher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/victron_gx_publisher/: __init__.py  aggregate.py  daemon.py  output.py  publisher.py
tests/: test_aggregate.py  test_daemon.py  test_output.py  test_publisher.py
