[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "victron-gx-publisher"
version = "0.1.0"
description = "Aggregate solar charger lifetime yield from a Victron GX MQTT broker."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.1,<3",
]

[project.scripts]
victron-gx-publisher = "victron_gx_publisher.daemon:main"

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/victron_gx_publisher"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
